# ConureDB

./: .gitignore  .scalafmt.conf  README.md  app.json  build.sbt  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  readme.md  skaffold.yaml
app/: _layout.tsx  index.tsx
app/(auth)/: login.tsx  sign-up.tsx  verify.tsx
apps/expo/: app.config.ts  logbox.js  package-lock.json  package.json
apps/expo/src/: _app.tsx  store.tsx
apps/expo/src/components/: animated.tsx  bottom-tab.tsx  header-bar.tsx  index.ts  search-bar.tsx
apps/expo/src/hooks/: index.ts  use-async-store.tsx  useWarmUpBrowser.ts
apps/expo/src/navigation/: navigation.tsx  screens.ts  types.ts
apps/expo/src/screens/: add-note.tsx  analytics.tsx  home.tsx  note.tsx  profile.tsx  settings.tsx  splash.tsx  todo-detail.tsx
apps/expo/src/theme/: dark.ts  index.ts  light.ts  textVariants.ts
apps/expo/src/utils/: local.tsx  (+1 more)
apps/mobile/: package.json
apps/nextjs/: next.config.mjs  package.json  tailwind.config.cjs
client/: package-lock.json  package.json
components/ui/: Alert.tsx  Button.tsx  Input.tsx
k8s/: gateway.yaml
proto/: currency.proto
service/: Cargo.toml
service/account/: go.mod  gqlgen.yml  server.go
service/account/graph/: generated.go  schema.resolvers.go
service/template/: Cargo.toml
service/todo/: .env  Cargo.toml
service/todo/migrations/: 20230813120236_todos.sql
service/todo/src/: main.rs
service/todo/src/todo/: entities.rs  interactor.rs  mod.rs  repository.rs
services/backend/: index.ts
services/currency/: Dockerfile  go.mod  go.sum  main.go  proto.sh
services/currency/k8s/: deployment.yaml
services/gateway/: .env  Cargo.toml  Dockerfile  package-lock.json  package.json  proto.sh  tsconfig.json
services/gateway/proto/: currency.proto  test.proto
services/gateway/src/: index.ts
services/todo/: Cargo.toml
services/todo/src/: entity.rs
src/: App.tsx  models.ts
src/components/: Layout.tsx  Logo.tsx  custom-tab.tsx
src/components/atoms/: box.tsx  index.ts  list-item.tsx  switch.tsx
src/components/molecules/: sticky-header.tsx
src/components/organisms/: add-sheet.tsx  bottom-sheet.tsx  index.ts  notifications.tsx
src/features/: index.ts
src/features/Home/: Home.tsx
src/features/Messages/: Messages.tsx
src/features/Notifications/: Notifications.tsx
src/features/Profile/: Profile.tsx
src/fixtures/: user.ts
src/pages/: _app.tsx  _document.tsx  index.tsx  messages.tsx  profile.tsx
src/pages/user/: [id].tsx
src/state/: theme.ts
tamagui/: animations.ts  animations.web.ts  fonts.ts  global.ts  tamagui.config.ts  tamaguiFonts.native.ts  theme.tsx
tamagui/theme/: componentThemeDefinitions.ts  index.ts  masks.tsx  palettes.tsx  shadows.tsx  templates.tsx  themes.tsx  tokens.tsx
(+62 files in other folders)
