[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3"
async-graphql = { version = "6.0.0", features = ["apollo_tracing"] }
async-graphql-actix-web = "6.0.1"
env_logger = "0.10.0"
log = "0.4"
slab = "0.4.2"
sqlx = { version = "0.7.1", features = [
  "runtime-async-std",
  "macros",
  "postgres",
] }
serde_derive = "1.0"
serde_json = "1.0.104"
serde = "1.0.183"
chrono = "0.4.26"
dotenv = "0.15.0"
failure = "0.1.8"
