[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-rc.2", default-features = false, features = [
  "macros",
] }
anyhow = "1.0.53"
async-graphql = { version = "6.0.1" }
async-graphql-actix-web = "6.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.14"
serde = "1.0.136"
sqlx = { version = "0.7.1" }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
